--- a/MessageProcessor.Lib/MessageProcessor.Lib.csproj
+++ b/MessageProcessor.Lib/MessageProcessor.Lib.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IMessage.cs" />
